--- a/KifuSF/Info.plist
+++ b/KifuSF/Info.plist
@@ -45,5 +45,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to calculate the distance between the nearast pick-up places.</string>
 </dict>
 </plist>
