--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -9,3 +9,4 @@ excluded: # paths to ignore during linting. Takes precedence over `included`.
 - Source/ExcludedFolder
 - Source/ExcludedFile.swift
 - Source/*/ExcludedFile.swift # Exclude files with a wildcard
+- KifuSF/Sourcery.generated.swift
