--- a/KifuSF/KifuSF.entitlements
+++ b/KifuSF/KifuSF.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>webcredentials:kifuapp.org</string>
+		<string>webcredentials:kifusf.com</string>
 	</array>
 	<key>com.apple.developer.authentication-services.autofill-credential-provider</key>
 	<true/>
